[package]
name = "micropool"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/micropool"
readme = "README.md"
description = """
Low-latency thread pool with parallel iterators
"""

[dependencies]
paralight = { git = "https://github.com/DouglasDwyer/paralight", rev = "cd164c3db9227a96316d0ade60fd636d4fceb437" }
smallvec = { version = "1.15.1", default-features = false }
spin = { version = "0.10.0", default-features = false, features = [ "once", "rwlock", "spin_mutex" ] }
wait_on_address = { version = "0.1.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }
futures-executor = "0.3.28"

[[bench]]
name = "criterion"
harness = false