[package]
name = "micropool"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/micropool"
readme = "README.md"
description = """
Low-latency thread pool with parallel iterators
"""

[dependencies]
paralight = { version = "0.0.8", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
spin = { version = "0.10.0", default-features = false, features = [ "once", "rwlock", "spin_mutex" ] }
wait_on_address = { version = "0.1.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }

[[bench]]
name = "criterion"
harness = false
